kanc_pamoi/src/tests/sample_code/should_fail/single_file/type_check/missing_match_case/missing_one.k
type Bool {
    true: Bool,
    false: Bool,
}

let foo = match Bool.true {
    true => Bool.false,
};
